Applying changes du to Twoday's new https mode

--- a/src/jade/videoload-version2.jade
+++ b/src/jade/videoload-version2.jade
@@ -1,11 +1,11 @@
 //- Twoday Blog story to document videoload's version 2
-- var Stand = 'Dezember 2016'
+- var Stand = 'Januar 2017'
 - var Anbieter = '16'
 - var Domain = 'neonwilderness'
 //- var CDNUrl = 'https://dl.dropboxusercontent.com/u/16775880/js/videoload2'
-- var CDNUrl = 'http://static.twoday.net/cdn/files'
+- var CDNUrl = 'https://static.twoday.net/cdn/files'
 //- var CDNUrl = '.'
-- var StoryUrl = 'http://' + Domain + '.twoday.net/stories/'
+- var StoryUrl = 'https://' + Domain + '.twoday.net/stories/'
 - var VideoToolUrl = StoryUrl + 'videotool2'
 mixin SimpleCopy(id)
   - var citeID = id + 'copy'
@@ -124,7 +124,7 @@ p.
         p Ihr Skin <em>Site.page</em> sollte nun in etwa so aussehen:
         p: img.googledrive(alt="videoload/install.jpg")
         p.text-center: span.sublabel.
-          &lt;% staticURL %&gt; ist ein Twoday-Makro und steht für "http://static.twoday.net/", dem abgesicherten Blogspeicher
+          &lt;% staticURL %&gt; ist ein Twoday-Makro und steht für "https://static.twoday.net/", dem abgesicherten Blogspeicher
           für Twoday-Bilder oder -Dateien.
       li.
         Klicken Sie auf "<em>Speichern und Schließen</em>" um Ihre Änderungen zu sichern. Sie können nun zu jeder Zeit in Ihren
@@ -238,7 +238,7 @@ p.
     h3 Beispiel: Bandcamp-Audio
     p.
       Nehmen wir ein konkretes Beispiel: Sie möchten das Album <em>"Love & War & The Sea In Between"</em> (Josh Garrels) von der Plattform
-      <a target="_blank" href="http://bandcamp.com/">Bandcamp</a> in einen neuen Twoday-Beitrag einbetten. Sie haben den entsprechenden iframe-Befehl auf seiner
+      <a target="_blank" href="https://bandcamp.com/">Bandcamp</a> in einen neuen Twoday-Beitrag einbetten. Sie haben den entsprechenden iframe-Befehl auf seiner
       <a target="_blank" href="https://joshgarrels.bandcamp.com/album/love-war-the-sea-in-between">Albumseite</a> ermittelt
       und in die Zwischenablage kopiert. Nach Aufruf des <a target="_blank" href="#{VideoToolUrl}">Videotools</a> fügen Sie den kopierten
       iframe-Befehl in das Eingabefeld <strong>iframe-Code</strong> ein <span class="redNumber">1</span>.
