--- a/src/jade/videotool-version2.jade
+++ b/src/jade/videotool-version2.jade
@@ -6,7 +6,7 @@ mixin ColorPickerInput(id)
 #prependStory(style="display:none")
   div(style="position:relative")
     a(
-      href="http://neonwilderness.twoday.net/stories/videoload2",
+      href="https://neonwilderness.twoday.net/stories/videoload2",
       style="position:absolute;right:0;font-size:12px;z-index:1"
     ) Videoload2-Script installiert?
 .row
