Switch to webspace due to Dropbox public folder shutdown

--- a/src/jade/provider/other.jade
+++ b/src/jade/provider/other.jade
@@ -5,7 +5,7 @@ p.
   bewährte Open Source HTML5 Videoplayer <a target="_blank" href="http://www.videojs.com/">VideoJS</a> verwendet. Die Adresse/URL des Videos
   wird im Parameter <span class="code">id</span> übergeben. Der Befehl für die Einbindung eines MP4-Videos aus einem öffentlichen Dropbox-Ordner
   hat dann z.B. folgendes Format:
-+LiveView("other ratio-2.4", "https://dl.dropboxusercontent.com/u/16775880/movies/oceans-clip.mp4")
++LiveView("other ratio-2.4", "http://www.s522667522.online.de/public/movies/oceans-clip.mp4")
 h6.top20 <span class="label">poster</span> &mdash; Posterbild für MP4-Videodatei festlegen
 p.
   Über einen weiteren Parameter weisen Sie die Videofunktion an, ein Posterbild im Videobereich anzuzeigen, solange das Video noch nicht
@@ -15,13 +15,13 @@ p.
   Wenn ein MP4-Video im Pfad <span class="code">http://www.meinewebadresse.de/videos/meinvideo.mp4</span> zu finden ist, muss ein zugehöriges
   jpg-Standbild die Adresse <span class="code">http://www.meinewebadresse.de/videos/meinvideo.jpg</span> besitzen. Für die Anzeige eines
   Standbilds ergänzen Sie einfach <span class="code">poster</span> als zusätzlichen Parameterwert.
-+LiveView("other ratio-2.4 <b>poster</b>", "https://dl.dropboxusercontent.com/u/16775880/movies/oceans-clip.mp4")
++LiveView("other ratio-2.4 <b>poster</b>", "http://www.s522667522.online.de/public/movies/oceans-clip.mp4")
 h6.top20 <span class="label">image</span> &mdash; Dateityp des Posterbilds festlegen
 p.
   Ist das Standbild nicht vom Typ <em>jpg</em> (Standard), so definieren Sie je nach Dateityp ergänzend ein <span class="code">image-png</span>,
   <span class="code">image-gif</span> oder <span class="code">image-bmp</span>.
 p <em>Beispiel</em>: Für ein MP4-Video in 500 Pixel Breite und einem gif-Standbild lautete der DIV-Befehl dann so:
-+LiveView("other width-500 poster <b>image-gif</b>", "https://dl.dropboxusercontent.com/u/16775880/movies/nodejs.mp4")
++LiveView("other width-500 poster <b>image-gif</b>", "http://www.s522667522.online.de/public/movies/nodejs.mp4")
 p.text-right: a(href="#", title="data-bind=click:function(){toggle('#other-id')}") Wie finde ich die ID eines MP4-Videos?
 #other-id(style="display:none")
   h6.top20: strong ID eines MP4-Videos ermitteln
