--- a/test/testpage.jade
+++ b/test/testpage.jade
@@ -1,4 +1,5 @@
-- var jsFolder = "https://googledrive.com/host/0B87rILW4RVIJdzJiMW5WRUdfalE/videoload2/"
+//- var jsFolder = "http://www.s522667522.online.de/public/js/videoload2/"
+- var jsFolder = "./"
 doctype html
 html(lang="de")
   head
@@ -27,7 +28,7 @@ html(lang="de")
         h3 Provider Soundcloud (groß)
         .html5video.soundcloud(id="20636707")
         h3 Provider Soundcloud (schmal)
-        .html5video.soundcloud.stripe(id="50824693")
+        .html5video.soundcloud.stripe(id="249959694")
         h3 Provider Giphy (als Frame)
         .html5video.giphy(id="JtwMddKpsF9Hq")
         h3 Provider Giphy (als Image)
@@ -62,6 +63,10 @@ html(lang="de")
         .html5video.bandcamp.layout-standard.artwork-small.tracklist.bgcol-333333.linkcol-0f91ff(id="1020001840")
         h3 Provider Slideshare
         .html5video.slideshare(id="8G4n1snse7WKmQ", class="ratio-1.2268")
+        h3 Provider Slides (dark)
+        .html5video.slides(id="news/custom-fonts", class="ratio-1.3714")
+        h3 Provider Slides (light, slide 5)
+        .html5video.slides(id="news/custom-fonts", class="ratio-1.3714 color-light slide-5")
         h3 Provider Giphy (image with ratio, appended at bottom)
         .html5video.giphy.asimage(id="ZJ6IOBmCaj5f2", class="ratio-2.3696")
           p This is a leading text within this DIV that should remain untouched.
@@ -70,7 +75,7 @@ html(lang="de")
         h3 Provider Speakerdeck (start from slide 15)
         .html5video.speakerdeck.slide-15(id="4ab3c53d71fd4434a87934b8600888fb")
         h3 Provider Other (MP4 video, poster of type gif)
-        .html5video.other.poster.image-gif(id="https://googledrive.com/host/0B87rILW4RVIJUFpWT2dLeG9RUzg/nodejs.mp4")
+        .html5video.other.poster.image-gif(id="http://www.s522667522.online.de/public/movies/nodejs.mp4")
     #mocha: p: a(href=".") Index
     #messages
     #fixtures
