Added dev tools to automatically upload new script versions and new html story content

--- a/src/jade/videoload-version2.jade
+++ b/src/jade/videoload-version2.jade
@@ -2,8 +2,8 @@
 - var Stand = 'April 2017'
 - var Anbieter = '17'
 - var Domain = 'neonwilderness'
-//- var CDNUrl = 'https://static.twoday.net/cdn/files'
-- var CDNUrl = '.'
+- var CDNUrl = 'https://static.twoday.net/cdn/files'
+//- var CDNUrl = '.'
 - var StoryUrl = 'https://' + Domain + '.twoday.net/stories/'
 - var VideoToolUrl = StoryUrl + 'videotool2'
 mixin SimpleCopy(id)
