--- a/src/jade/videotool-version2.jade
+++ b/src/jade/videotool-version2.jade
@@ -77,9 +77,15 @@ fieldset#fldOptions(style="display:none")
       input.bottom0#chkAsImage(type="checkbox", title="data-bind=checked:chkAsImage")
       label(for="chkAsImage", style="margin-right:0") als Bild einbinden
     .small-9.columns: input#txtAlt(type="text", title="data-bind=textInput:txtAlt, visible:chkAsImage | data-!placeholder=Bildtext für alt-Parameter")
-  .row(title="data-bind=if:(providerTemplate()==='TmplSlide' || providerTemplate()==='TmplSlides')")
+  .row(title="data-bind=if:providerTemplate()==='TmplSlide'")
     .small-3.columns.pad6: label(for="txtSlide") Startseite:
     .small-3.columns.end: input.bottom0#txtSlide(type="text", title="data-bind=textInput:txtSlide")
+  .row(title="data-bind=if:providerTemplate()==='TmplSlides'")
+    .small-3.columns.pad6: label(for="txtSlide") Startseite:
+    .small-3.columns: input.bottom0#txtSlide(type="text", title="data-bind=textInput:txtSlide")
+    .small-3.columns.pad6: label(for="optColor") Farbschema:
+    .small-3.columns
+      select#optColor(name="optColor", title="data-bind=options:colorOptions, optionsText:'colorText', optionsValue:'colorValue', value:optColor")
   .row(title="data-bind=if:providerTemplate()==='TmplSoundcloud'")
     .small-6.columns.pad6
         input.bottom0#chkStripe(type="checkbox", title="data-bind=checked:chkStripe")
@@ -102,7 +108,7 @@ fieldset#fldOptions(style="display:none")
         .small-3.columns
           input#chkResult(type="checkbox", title="data-bind=checked:chkResult")
           label(for="chkResult") result
-  .row(title="data-bind=if:(providerTemplate()==='TmplFiddle' || providerTemplate()==='TmplSlides')")
+  .row(title="data-bind=if:providerTemplate()==='TmplFiddle'")
     .small-3.columns.pad6: label(for="optColor") Farbschema:
     .small-3.columns.end
       select#optColor(name="optColor", title="data-bind=options:colorOptions, optionsText:'colorText', optionsValue:'colorValue', value:optColor")
