--- a/src/jade/videotool-version2.jade
+++ b/src/jade/videotool-version2.jade
@@ -3,7 +3,7 @@ mixin ColorPickerInput(id)
   .row.collapse
     .small-9.columns: input(id="#{id}", type="text", title="data-bind=textInput:#{id}")
     .small-3.columns: button.postfix.jscolor(class="{valueElement:'#{id}',required:false,uppercase:false}")
-#prependStory(style="display:none")
+#prependStory.videotool2(style="display:none")
   div(style="position:relative")
     a(
       href="https://neonwilderness.twoday.net/stories/videoload2",
