Added filmstarts.de, Updated dependencies, Fixed some html minification issues

--- a/src/jade/provider/bandcamp.jade
+++ b/src/jade/provider/bandcamp.jade
@@ -89,7 +89,7 @@ p.text-right: a(href="#", title="data-bind=click:function(){toggle('#bandcamp-id
       | Klicken Sie auf eine der drei Layout-Grafiken
       .clearfix: img.googledrive(alt="videoload/bandcamp-id3.jpg")
     li
-      | Klicken Sie in das Feld <span class="label blue">Embed</span>, welches den <span class="code">&lt;iframe&gt;</span>-Code enthält und
+      | Klicken Sie in das Feld <span class="label blue">Embed</span>, welches den <span class="code">#{lt}iframe#{gt}</span>-Code enthält und
       | kopieren Sie diesen mit <span class="code">Strg-C</span> (Windows) oder <span class="code">Cmd-C</span> (Mac) in die Zwischenablage.
       .clearfix: img.googledrive(alt="videoload/bandcamp-id4.jpg")
     li
