--- a/src/jade/provider/jsfiddle.jade
+++ b/src/jade/provider/jsfiddle.jade
@@ -58,7 +58,7 @@ p.text-right: a(href="#", title="data-bind=click:function(){toggle('#jsfiddle-id
       .clearfix: img.googledrive(alt="videoload/jsfiddle-id2.jpg")
     li
       | Klicken Sie auf <em>Prefer iframe?</em> und dann in das Feld <em>Embed Code</em>,
-      | welches den <span class="code">&lt;iframe&gt;</span>-Code enthält und kopieren Sie diesen mit <span class="code">Strg-C</span>
+      | welches den <span class="code">#{lt}iframe#{gt}</span>-Code enthält und kopieren Sie diesen mit <span class="code">Strg-C</span>
       | (Windows) oder <span class="code">Cmd-C</span> (Mac) in die Zwischenablage.
       .clearfix: img.googledrive(alt="videoload/jsfiddle-id3.jpg")
     li
