--- a/src/jade/provider/slides.jade
+++ b/src/jade/provider/slides.jade
@@ -5,7 +5,7 @@ p.
   Falls Sie die Slides-Präsentation nicht von Anfang an, sondern ab einer bestimmten Seite ("Slide") starten wollen,
   können Sie dies mit dem <span class="code">slide</span>-Parameter einstellen. Im Parameterwert wird die gewünschte Startseite
   spezifiziert. Das Videoload-Beispiel
-p.text-center: span.code &lt;div class="html5video slides <b>slide-3</b>" id="{eine-slides-id}"&gt;&lt;/div&gt;
+p.text-center: span.code #{lt}div class="html5video slides <b>slide-3</b>" id="{eine-slides-id}"#{gt}#{lt}/div#{gt}
 p startet die Präsentation auf der dritten Seite.
 h6.top20 <span class="label">color</span> &mdash; Farbschema festlegen
 p Slides.com bietet zwei Farbschemata an:
