--- a/src/jade/provider/speakerdeck.jade
+++ b/src/jade/provider/speakerdeck.jade
@@ -18,7 +18,7 @@ p.text-right: a(href="#", title="data-bind=click:function(){toggle('#speakerdeck
   p Sobald Sie in der Einzelansicht der Speakerdeck-Präsentation sind, können Sie mit folgenden Schritten die ID ermitteln:
   ol
     li
-      | Klicken Sie im Bereich Share auf <span class="label">&lt; /&gt;Embed</span>:
+      | Klicken Sie im Bereich Share auf <span class="label">#{lt} /#{gt}Embed</span>:
       .clearfix: img.googledrive(alt="videoload/speakerdeck-id1.jpg")
     li
       | Klicken Sie im angezeigten Popup-Fenster oben auf <em>Embed</em> und kopieren Sie dann den Embed-Code mit <span class="code">Strg-C</span>
