--- a/test/testpage.jade
+++ b/test/testpage.jade
@@ -7,7 +7,7 @@ html(lang="de")
     title Testseite für den video2day-Generator
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.0.2/mocha.min.css")
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/mocha/4.0.1/mocha.min.css")
     style.
       body { background: #f5f5f5; color: #444; padding: 10px 20px; font-family: Tahoma, sans-serif; }
       #wrapper { width: 800px; margin: 0 auto; background: #fff; }
@@ -33,6 +33,8 @@ html(lang="de")
         .html5video.giphy(id="JtwMddKpsF9Hq")
         h3 Provider Giphy (als Image)
         .html5video.giphy.asimage.alt-Dancing_Michael_Myers(id="JtwMddKpsF9Hq")
+        h3 Provider Filmstarts
+        .html5video.filmstarts(id="19235661")
         h3 Provider FunnyOrDie
         .html5video.funnyordie(id="000a37c115", class="ratio-1.6")
         h3 Provider Liveleak
@@ -79,8 +81,8 @@ html(lang="de")
     #mocha: p: a(href=".") Index
     #messages
     #fixtures
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.0.2/mocha.min.js")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/mocha/4.0.1/mocha.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.1.2/chai.min.js")
     script(src!="#{jsFolder}videoload2.js")
     script(type="text/javascript") video2day.run({debug: true, maxWidth: 400});
     script(type="text/javascript") mocha.setup('bdd');
