--- a/src/jade/provider/other.jade
+++ b/src/jade/provider/other.jade
@@ -3,7 +3,7 @@ p.
   Sie können auch beliebige MP4-Videodateien in einem Videoplayer abspielen. Diese müssen eine öffentlich erreichbare URL besitzen,
   also z.B. bei einem Cloudspeicheranbieter wie Dropbox, Photobucket, Flickr oder auf eigenem Webspace liegen. Für die Anzeige wird der
   bewährte Open Source HTML5 Videoplayer <a target="_blank" href="http://www.videojs.com/">VideoJS</a> verwendet. Die Adresse/URL des Videos
-  wird im Parameter <span class="code">id</span> übergeben. Der Befehl für die Einbindung eines MP4-Videos aus einem öffentlichen Dropbox-Ordner
+  wird im Parameter <span class="code">id</span> übergeben. Der Befehl für die Einbindung eines MP4-Videos aus einem öffentlichen Ordner
   hat dann z.B. folgendes Format:
 +LiveView("other ratio-2.4", "http://www.s522667522.online.de/public/movies/oceans-clip.mp4")
 h6.top20 <span class="label">poster</span> &mdash; Posterbild für MP4-Videodatei festlegen
