Added provider TED and Strawpoll. Refactoring for async processing.

--- a/src/jade/provider/giphy.jade
+++ b/src/jade/provider/giphy.jade
@@ -1,15 +1,15 @@
 //- Giphy documentation of parameters
 p.
   <b>Giphy</b> ist ein Anbieter von GIFs und Animationen. Eine Besonderheit bei Giphy ist, dass Videoload ein Objekt
-  sowohl als <span class="code">#{lt}iframe#{gt}</span> als auch als einfaches <span class="code">#{lt}img#{gt}</span>
+  sowohl als <span class="code">!{lt}iframe!{gt}</span> als auch als einfaches <span class="code">!{lt}img!{gt}</span>
   einbinden kann. Zur Veranschaulichung sehen Sie nachstehend ein Beispiel mit beiden Einbindungstypen:
 .row
   .small-12.medium-6.columns
     .html5video.giphy#GBdMUGeTSseM8(style="margin-right:15px")
-      p.text-center als <span class="code">#{lt}iframe#{gt}</span>
+      p.text-center als <span class="code">!{lt}iframe!{gt}</span>
   .small-12.medium-6.columns
     .html5video.giphy.asimage#GBdMUGeTSseM8
-      p.text-center als <span class="code">#{lt}img#{gt}</span>
+      p.text-center als <span class="code">!{lt}img!{gt}</span>
 p Die Einbindung als Bild (img) hat leichte Geschwindigkeitsvorteile, bietet jedoch dafür keinerlei Links zur Giphy-Hauptseite.
 h6.top20 <span class="label">asimage</span> &mdash; Das Giphy-Objekt als einfaches Bild einbinden
 p.
