--- a/src/jade/testtool.jade
+++ b/src/jade/testtool.jade
@@ -1,5 +1,4 @@
 //- var jsFolder (dynamically set in gulp script: DEV='./' PROD=same as staticURL)
-- var staticURL = "https://static.twoday.net/cdn/files/"
 doctype html
 html(lang="de")
   head
@@ -8,14 +7,14 @@ html(lang="de")
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     script(type="text/javascript", src="https://static.twoday.net/sys.files/js/jquery/jquery.min.js")
-    script(type="text/javascript", src="#{staticURL}fastclick-min-js.js")
+    script(type="text/javascript", src="https://static.twoday.net/cdn/files/fastclick-min-js.js")
     link(rel="stylesheet", href="https://neonwilderness.twoday.net/main.css")
     link(rel="stylesheet", href="https://netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css")
-    link(rel="stylesheet", href="­#{staticURL}foundation55-min-css.css")
-    link(rel="stylesheet", href="#{staticURL}awesomeeditorcore-min-css.css")
-    link(rel="stylesheet", href="#{staticURL}rainy-min-css.css")
-    link(rel="stylesheet", href="#{staticURL}snippet-min-css.css")
-    link(rel="stylesheet", href="#{staticURL}accordiontabs-min-css.css")
+    link(rel="stylesheet", href="https://static.twoday.net/cdn/files/foundation55-min-css.css")
+    link(rel="stylesheet", href="https://static.twoday.net/cdn/files/awesomeeditorcore-min-css.css")
+    link(rel="stylesheet", href="https://static.twoday.net/cdn/files/rainy-min-css.css")
+    link(rel="stylesheet", href="https://static.twoday.net/cdn/files/snippet-min-css.css")
+    link(rel="stylesheet", href="https://static.twoday.net/cdn/files/accordiontabs-min-css.css")
   body
     .inner-wrap
       #foundation5.container
@@ -24,7 +23,7 @@ html(lang="de")
             h3.storyTitle Videotool (Version 2)
             .storyContent: include ./videotool-version2.jade
           #sidebar.large-3
-    script(src="#{staticURL}gdimages-min-js.js")
+    script(src="https://static.twoday.net/cdn/files/gdimages-min-js.js")
     script.
       $('.googledrive').gdimages().init({
         gdDomain: 'http://www.s522667522.online.de',
@@ -33,7 +32,7 @@ html(lang="de")
         addClass: 'neonimg th',
         titleContent: 'keep'
         });
-    script(src="#{staticURL}foundation55-min-js.js")
+    script(src="https://static.twoday.net/cdn/files/foundation55-min-js.js")
     script.
       $('[title^=data-]').foundation2day().init({
         validateDataAttribs: true,
@@ -58,12 +57,12 @@ html(lang="de")
         }
       });
     script(src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js")
-    script(src="#{staticURL}storyscript-min-js.js")
+    script(src="https://static.twoday.net/cdn/files/storyscript-min-js.js")
     script $('.storyScript').storyScript().init();
-    script(src="#{staticURL}snippet-min-js.js")
+    script(src="https://static.twoday.net/cdn/files/snippet-min-js.js")
     script.
-      var sParam = {style: 'golden', showNum: false, clipboard: '#{staticURL}ZeroClipboard.swf'};
+      var sParam = {style: 'golden', showNum: false, clipboard: 'https://static.twoday.net/cdn/files/ZeroClipboard.swf'};
       $('pre.html').snippet('html', sParam); $('pre.js').snippet('javascript', sParam);
-    script(src="#{staticURL}accordiontabs-min-js.js")
+    script(src="https://static.twoday.net/cdn/files/accordiontabs-min-js.js")
     script(src!="#{jsFolder}videoload2.js")
     script(src!="#{jsFolder}videoload2-tool.js")
