--- a/src/jade/provider/vimeo.jade
+++ b/src/jade/provider/vimeo.jade
@@ -1,9 +1,20 @@
 //- vimeo documentation of parameters
 p.
-  <b>Vimeo</b> ist ein Videoanbieter. Er verfügt über keine besonderen Parameter.
-h6.top20: strong Beispiel
-p Es soll ein Vimeo-Video mit der ID '15759511' in einem Blogbeitrag eingebunden werden:
-+LiveView("vimeo", "15759511")
+  <b>Vimeo</b> ist ein Videoanbieter. Folgender zusätzlicher Parameter ist möglich:
+h6.top20 <span class="label">linkcol</span> &mdash; Farbe für Links festlegen
+p.
+  Sie können die Farbe der Vimeo-Links auf dem Video einstellen. Dies empfiehlt sich z.B., wenn durch den
+  Hintergrund des Videos die Links nur schlecht sichtbar sind. Wählen Sie dann eine passende Farbe aus
+  und ergänzen diese im Parameter <span class="code">linkcol-<b>ffffff</b></span>. Fehlt der Parameter, wird
+  standardmäßig die <span style="color:#00adef">Linkfarbe '00adef' verwendet</span>.
+p.
+  Farbcodes werden als 6-stellige Hexadezimalzahl kodiert. Welche Farbe welchen Hexcode besitzt, können Sie z.B. auf
+  <a target="_blank" href="http://htmlcolorcodes.com/color-picker/">dieser Webseite</a> herausfinden.
+h6.top20: strong Beispiele
+p Es soll ein Vimeo-Video mit der ID '125947740' in Superbreitbild in einem Blogbeitrag eingebunden werden:
++LiveView("vimeo <b>ratio-2.37037</b>", "125947740")
+p Das Vimeo-Video soll zusätzlich mit der Linkfarbe 'c9ff23' angezeigt werden:
++LiveView("vimeo <b>linkcol-c9ff23</b> ratio-2.37037", "125947740")
 p.text-right: a(href="#", title="data-bind=click:function(){toggle('#vimeo-id')}") Wie finde ich die ID eines Vimeo-Videos?
 #vimeo-id(style="display:none")
   h6.top20: strong Vimeo-ID manuell ermitteln
