--- a/src/jade/provider/filmstarts.jade
+++ b/src/jade/provider/filmstarts.jade
@@ -16,7 +16,7 @@ p.text-right: a(href="#", title="data-bind=click:function(){toggle('#filmstarts-
       | Oben aus der angezeigten Browser-URL (die einfachste Methode):
       .clearfix: img.googledrive(alt="videoload/filmstarts-id1.jpg")
     li
-      | Alternativ klicken Sie auf das Symbol <span class="label">TEILEN</span> und danach auf <span class="label">!{lt}/!{gt} EMBED</span>:
+      | Alternativ klicken Sie auf das Symbol <span class="label">TEILEN</span> und danach auf <span class="label">#{lt}/#{gt} EMBED</span>:
       .clearfix: img.googledrive(alt="videoload/filmstarts-id2.jpg")
     li
       | Der Einbettungsbefehl ist damit in die Zwischenablage kopiert und kann in einen Texteditor eingefügt werden.
