--- a/src/jade/provider/funnyordie.jade
+++ b/src/jade/provider/funnyordie.jade
@@ -18,7 +18,7 @@ p.text-right: a(href="#", title="data-bind=click:function(){toggle('#funnyordie-
       | Alternativ klicken Sie auf das Symbol <span class="label">MORE</span>:
       .clearfix: img.googledrive(alt="videoload/funnyordie-id2.jpg")
     li
-      | danach auf <span class="label">!{lt}/!{gt} EMBED</span>:
+      | danach auf <span class="label">#{lt}/#{gt} EMBED</span>:
       .clearfix: img.googledrive(alt="videoload/funnyordie-id3.jpg")
     li
       | Kopieren Sie nun den Einbettungsbefehl (am besten mithilfe einen Texteditors). Der markierte Text entspricht der ID.
