--- a/src/jade/provider/ted.jade
+++ b/src/jade/provider/ted.jade
@@ -6,7 +6,7 @@ h6.top20 <span class="label">lang</span> &mdash; Video mit deutschen Untertiteln
 p.
   Falls das TED-Video über deutsche Untertitel verfügt, können Sie diese mit dem <span class="code">lang</span>-Parameter
   aktivieren: 
-p.text-center: span.code !{lt}div class="html5video ted <b>lang</b>" id="{eine-ted-id}"!{gt}!{lt}/div!{gt}
+p.text-center: span.code #{lt}div class="html5video ted <b>lang</b>" id="{eine-ted-id}"#{gt}#{lt}/div#{gt}
 p zeigt während des Videos deutsche Untertitel an.
 p.
   Wenn Sie den <span class="code">lang</span>-Parameter aktivieren, muss sichergestellt sein, dass dieses
