--- a/src/jade/provider/vevo.jade
+++ b/src/jade/provider/vevo.jade
@@ -15,7 +15,7 @@ p.text-right: a(href="#", title="data-bind=click:function(){toggle('#vevo-id')}"
       | Oben aus der angezeigten Browser-URL (die einfachste Methode):
       .clearfix: img.googledrive(alt="videoload/vevo-id1.jpg")
     li
-      | Alternativ klicken Sie auf das Symbol <span class="label">Teilen</span> und anschließend auf <span class="label">!{lt}/!{gt} Embed Code</span> :
+      | Alternativ klicken Sie auf das Symbol <span class="label">Teilen</span> und anschließend auf <span class="label">#{lt}/#{gt} Embed Code</span> :
       .clearfix: img.googledrive(alt="videoload/vevo-id2.jpg")
     li
       | Im folgenden Bildschirm deaktivieren Sie Autoplay und den ergänzenden Text durch zweimaligen Klick auf "Nein",
