--- a/src/jade/videoload-version2.jade
+++ b/src/jade/videoload-version2.jade
@@ -19,7 +19,7 @@ mixin SimpleCopy(id)
       ihn in die Zwischen&shy;ablage. Falls bei Ihnen der Link <span class="label blue">copy</span> angezeigt wird
       (Rechner mit Adobe Flash-Installation), können Sie darauf klicken, um den Text ohne Pop-Up-Fenster sofort in
       die Zwischen&shy;ablage zu kopieren. Gehen Sie nun in Ihren Skin Site.page und kopieren dort aus der
-      Zwischenablage an die richtige Stelle vor <span class="code">!{lt}/body!{gt}</span>.
+      Zwischenablage an die richtige Stelle vor <span class="code">#{lt}/body#{gt}</span>.
 mixin ParamHead()
   thead: tr
     th Parameter
@@ -29,7 +29,7 @@ mixin LiveView(classes, id, orientation)
   - var orientation = orientation || 'text-center'
   p(class="#{orientation}")
     - var code = '&lt;div class="html5video ' + classes + '" id="' + id + '"&gt;&lt;/div&gt;'
-    span.code(style="white-space:normal")!= code
+    span.code(style="white-space:normal")= code
     if noDummyId
       - var lifeviewUrl = VideoToolUrl + '?provider=' + encodeURIComponent(classes.replace(/(<b>|<\/b>)/g,'')) + '&id=' + encodeURIComponent(id)
       a(target="_blank", href!=lifeviewUrl)
@@ -40,7 +40,7 @@ mixin parameter-start(provider)
     Um ein #{provider}-Video an einer gewünschten Stelle zu starten, z.B. bei 02:15 (Minuten:Sekunden), rechnen Sie die
     Zeitangabe in Sekunden um (im Beispiel 02:15 = 2*60+15 = 135) und fügen das Ergebnis als Parameterwert an die Kennung
     <span class="code">start</span>. Das vollständige Kommando lautet dann folgendermaßen:
-  p.text-center: span.code !{lt}div class="html5video #{provider} <b>start-135</b>" id="{eine-#{provider}-ID}"!{gt}!{lt}/div!{gt}
+  p.text-center: span.code #{lt}div class="html5video #{provider} <b>start-135</b>" id="{eine-#{provider}-ID}"#{gt}#{lt}/div#{gt}
 .panel.radius.callout.videoload2
   cite.
     Dieser Beitrag dokumentiert die nunmehr zweite, vollständig überarbeitete Version des Videoload-Werk&shy;zeugs, mit dem sich
@@ -83,8 +83,8 @@ cite#techies(style="display:none")
     <a target="_blank" href="https://github.com/NeonWilderness/video2day-ts">hier</a> ansehen.
 h3 Warum Videoload und wozu dient es?
 p.
-  Seit die meisten Videoplattformen und Content-Anbieter den alten <span class="code">!{lt}embed!{gt}</span>-Befehl zugunsten des mo&shy;derneren
-  <span class="code">!{lt}iframe!{gt}</span>-Formats aufgegeben haben, ist eine Einbindung solcher Quellen mit Standardmitteln bei Twoday
+  Seit die meisten Videoplattformen und Content-Anbieter den alten <span class="code">#{lt}embed#{gt}</span>-Befehl zugunsten des mo&shy;derneren
+  <span class="code">#{lt}iframe#{gt}</span>-Formats aufgegeben haben, ist eine Einbindung solcher Quellen mit Standardmitteln bei Twoday
   nicht mehr möglich. In Twoday-Beiträgen wird jeder mutige Versuch einer direkten iframe-Nutzung beim Speichern des Beitragstextes sofort
   wieder herausgefiltert.
 p.
@@ -116,16 +116,16 @@ p.
         Klicken Sie auf die Überschrift <span class="label blue">Hauptseite (Site.page)</span>, danach in das Feld mit dem Scrollbalken
         und wandern Sie ganz an das untere Ende der Anzeige.
       li
-        | Kopieren Sie dort <strong>vor</strong> das abschließende <span class="code">!{lt}/body!{gt}</span>-Element folgende Zeilen hinein:
+        | Kopieren Sie dort <strong>vor</strong> das abschließende <span class="code">#{lt}/body#{gt}</span>-Element folgende Zeilen hinein:
         pre.html.
-          !{lt}script type="text/javascript" src="!{static}cdn/files/videoload2-min-js.js"!{gt}!{lt}/script!{gt}
-          !{lt}script type="text/javascript"!{gt}video2day.run();!{lt}/script!{gt}
+          #{lt}script type="text/javascript" src="#{static}cdn/files/videoload2-min-js.js"#{gt}#{lt}/script#{gt}
+          #{lt}script type="text/javascript"#{gt}video2day.run();#{lt}/script#{gt}
         p.text-right: a(href="#", title="data-bind=click:function(){toggle('#installcopy')}") Wie kopiere ich das?
         +SimpleCopy("install")
         p Ihr Skin <em>Site.page</em> sollte nun in etwa so aussehen:
         p: img.googledrive(alt="videoload/install.jpg")
         p.text-center: span.sublabel.
-          !{static} ist ein Twoday-Makro und steht für "https://static.twoday.net/", dem abgesicherten Blogspeicher
+          #{static} ist ein Twoday-Makro und steht für "https://static.twoday.net/", dem abgesicherten Blogspeicher
           für Twoday-Bilder oder -Dateien.
       li.
         Klicken Sie auf "<em>Speichern und Schließen</em>" um Ihre Änderungen zu sichern. Sie können nun zu jeder Zeit in Ihren
@@ -136,12 +136,12 @@ p.
     p.
       Falls Sie bereits die Erstversion des Videoload-Scripts nutzen, sollten Sie auf die neue Version 2 umstellen. Hierzu ist der Aufruf
       von Videoload im Skin <em>Site.page</em> anzupassen bzw. zu ergänzen.
-    p Bisher steht dort am Ende des Skins, vor dem abschließenden <span class="code">!{lt}/body!{gt}</span>-Befehl, folgender Eintrag:
-    p.text-center: span.code !{lt}script type="text/javascript" src="!{lt}% staticURL %!{gt}cdn/files/videoload-min-js.js"!{gt}!{lt}/script!{gt}
+    p Bisher steht dort am Ende des Skins, vor dem abschließenden <span class="code">#{lt}/body#{gt}</span>-Befehl, folgender Eintrag:
+    p.text-center: span.code #{lt}script type="text/javascript" src="#{lt}% staticURL %#{gt}cdn/files/videoload-min-js.js"#{gt}#{lt}/script#{gt}
     p Bitte ändern/erweitern Sie den Aufruf wie folgt:
     pre.html.
-      !{lt}script type="text/javascript" src="!{static}cdn/files/videoload2-min-js.js"!{gt}!{lt}/script!{gt}
-      !{lt}script type="text/javascript"!{gt}video2day.run();!{lt}/script!{gt}
+      #{lt}script type="text/javascript" src="#{static}cdn/files/videoload2-min-js.js"#{gt}#{lt}/script#{gt}
+      #{lt}script type="text/javascript"#{gt}video2day.run();#{lt}/script#{gt}
     p.text-right: a(href="#", title="data-bind=click:function(){toggle('#upgradecopy')}") Wie kopiere ich das?
     p d.h. also in Zeile 1 den Scriptnamen <b>videoload</b> in <b>videoload2</b> ändern und die zweite Zeile darunter ergänzen.
     cite.
@@ -158,7 +158,7 @@ p.
       von der das anzuzeigende Objekt stammt. Im Beispiel oben soll ein Youtube-Video generiert werden. Im Attribut <span class="code">id</span>
       legen Sie fest, welches Youtube-Video angezeigt wird (jedes Anbieterelement hat eine eindeutige Identifikation).
     p.
-      Die betreffende ID findet sich meist recht einfach im Einbettungs&shy;code des Videoanbieters (dem !{lt}iframe!{gt}-Befehl) und besteht i.d.R. aus
+      Die betreffende ID findet sich meist recht einfach im Einbettungs&shy;code des Videoanbieters (dem #{lt}iframe#{gt}-Befehl) und besteht i.d.R. aus
       einer kurzen Kombination von Zahlen und Buchstaben. In der Tabelle "Individuelle Parameter je Anbieter" weiter unten finden Sie eine genaue
       Information, wie Sie die benötigte ID bei jedem Anbieter manuell ermitteln. Außerdem stelle ich im Folgekapitel ein <strong>Tool</strong>
       vor, das die notwendigen Daten voll&shy;automatisch aus dem kopierten iframe-Einbettungs&shy;code ermittelt und für Sie den korrekten
