--- a/src/jade/videoload-version2.pug
+++ b/src/jade/videoload-version2.pug
@@ -203,26 +203,26 @@ p.
     ul#providerTabs.tabs.tabBlue(title="data-bind=foreach:providerNames()")
       li: a(href="#", title="data-bind=attr:{name:'tab-'+$data}, text:$data")
     #providerDocumentation.tabcontent
-      #tab-bandcamp: include ./provider/bandcamp.jade
-      #tab-dailymotion: include ./provider/dailymotion.jade
-      #tab-dctptv: include ./provider/dctptv.jade
-      #tab-filmstarts: include ./provider/filmstarts.jade
-      #tab-funnyordie: include ./provider/funnyordie.jade
-      #tab-giphy: include ./provider/giphy.jade
-      #tab-jsfiddle: include ./provider/jsfiddle.jade
-      #tab-liveleak: include ./provider/liveleak.jade
-      #tab-metacafe: include ./provider/metacafe.jade
-      #tab-slides: include ./provider/slides.jade
-      #tab-slideshare: include ./provider/slideshare.jade
-      #tab-soundcloud: include ./provider/soundcloud.jade
-      #tab-speakerdeck: include ./provider/speakerdeck.jade
-      #tab-strawpoll: include ./provider/strawpoll.jade
-      #tab-ted: include ./provider/ted.jade
-      #tab-vevo: include ./provider/vevo.jade
-      #tab-vimeo: include ./provider/vimeo.jade
-      #tab-vine: include ./provider/vine.jade
-      #tab-youtube: include ./provider/youtube.jade
-      #tab-other: include ./provider/other.jade
+      #tab-bandcamp: include ./provider/bandcamp.pug
+      #tab-dailymotion: include ./provider/dailymotion.pug
+      #tab-dctptv: include ./provider/dctptv.pug
+      #tab-filmstarts: include ./provider/filmstarts.pug
+      #tab-funnyordie: include ./provider/funnyordie.pug
+      #tab-giphy: include ./provider/giphy.pug
+      #tab-jsfiddle: include ./provider/jsfiddle.pug
+      #tab-liveleak: include ./provider/liveleak.pug
+      #tab-metacafe: include ./provider/metacafe.pug
+      #tab-slides: include ./provider/slides.pug
+      #tab-slideshare: include ./provider/slideshare.pug
+      #tab-soundcloud: include ./provider/soundcloud.pug
+      #tab-speakerdeck: include ./provider/speakerdeck.pug
+      #tab-strawpoll: include ./provider/strawpoll.pug
+      #tab-ted: include ./provider/ted.pug
+      #tab-vevo: include ./provider/vevo.pug
+      #tab-vimeo: include ./provider/vimeo.pug
+      #tab-vine: include ./provider/vine.pug
+      #tab-youtube: include ./provider/youtube.pug
+      #tab-other: include ./provider/other.pug
       p.text-right
         a(href="#", title="data-bind=click:function(){scrollTo('#providerTabs')} | data-!title=Zum Anfang der Anbietertabelle")
           i.fa.fa-chevron-up.fa-lg &nbsp;
