--- a/src/jade/teststory.pug
+++ b/src/jade/teststory.pug
@@ -1,9 +1,9 @@
-//- var jsFolder (dynamically set in gulp script: DEV='./' PROD=same as staticURL)
+//- var jsFolder (dynamically set in gulp script: DEV=./ PROD=same as staticURL)
 doctype html
 html(lang="de")
   head
     meta(charset="UTF-8")
-    title Testseite Twoday-Tool, v#{pkgVersion}
+    title Testseite Twoday-Story, v#{pkgVersion}
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     script(type="text/javascript", src="https://static.twoday.net/sys.files/js/jquery/jquery.min.js")
@@ -20,8 +20,8 @@ html(lang="de")
       #foundation5.container
         .row
           #content.large-9
-            h3.storyTitle Videotool (Version 2)
-            .storyContent: include ./videotool-version2.jade
+            h3.storyTitle Videos reloaded - Die Videoload-Version 2
+            .storyContent: include ./videoload-version2.pug
           #sidebar.large-3
     script(src="https://static.twoday.net/cdn/files/gdimages-min-js.js")
     script.
@@ -64,5 +64,5 @@ html(lang="de")
       var sParam = {style: 'golden', showNum: false, clipboard: 'https://static.twoday.net/cdn/files/ZeroClipboard.swf'};
       $('pre.html').snippet('html', sParam); $('pre.js').snippet('javascript', sParam);
     script(src="https://static.twoday.net/cdn/files/accordiontabs-min-js.js")
-    script(src!="#{jsFolder}videoload2.js")
-    script(src!="#{jsFolder}videoload2-tool.js")
+    script(src!=jsFolder + "videoload2.js")
+    script(type="text/javascript") video2day.run({debug: true});
