--- a/test/testpage.pug
+++ b/test/testpage.pug
@@ -6,7 +6,7 @@ html(lang="de")
     title Testseite für den video2day-Generator, v#{pkgVersion}
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/mocha/4.0.1/mocha.min.css")
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/mocha/5.2.0/mocha.min.css")
     style.
       body { background: #f5f5f5; color: #444; padding: 10px 20px; font-family: Tahoma, sans-serif; }
       #wrapper { width: 800px; margin: 0 auto; background: #fff; }
@@ -22,9 +22,9 @@ html(lang="de")
     #mocha: p: a(href=".") Index
     #messages
     #fixtures
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/mocha/4.0.1/mocha.min.js")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.1.2/chai.min.js")
-    script(src!="#{jsFolder}videoload2.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/mocha/5.2.0/mocha.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.2.0/chai.min.js")
+    script(src!=jsFolder + "videoload2.js")
     script(type="text/javascript") mocha.setup('bdd');
-    script(src="#{jsFolder}videoload2-spec.js")
+    script(src!=jsFolder + "videoload2-spec.js")
     script(type="text/javascript") mocha.run();
